/**
 * Represents the priority of a task.
 * @author Rodriguez
 */
public enum Priority {
    HIGH,
    MEDIUM,
    LOW
}