/**
 * Represents the status of a task.
 * @author Rodriguez
 */
public enum Status {
    OPEN,
    IN_PROGRESS,
    COMPLETED,
    BLOCKED
}